# Paletti

./: .editorconfig  .gitignore  .travis.yml  LICENSE  NOTICE  README.asciidoc  build.gradle.kts  meson.build  settings.gradle.kts
android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/androidTest/java/app/paletti/android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  paletti.cpp
android/app/src/main/java/app/paletti/android/: AndroidBmpUtil.java  App.kt  BindingAdapters.kt  ImageFragment.kt  ImageViewModel.kt  InitialFragment.kt  MainActivity.kt  MainFragment.kt  Models.kt  ParentAboutFragment.kt  Worker.kt
android/app/src/main/res/anim/: image_enter.xml
android/app/src/main/res/animator/: color_tile.xml
android/app/src/main/res/drawable/: bg_dropzone.xml  border_top.xml  switch_thumb.xml  switch_track.xml  switch_track_colors.xml
android/app/src/main/res/layout/: fragment_about.xml  fragment_image.xml  fragment_initial.xml  fragment_main.xml  list_item_color_tile.xml
android/app/src/main/res/layout-land/: fragment_initial.xml
android/app/src/main/res/menu/: activity_main.xml  fragment_image.xml  fragment_main.xml
android/app/src/main/res/raw/: report.txt
android/app/src/main/res/transition/: fragment_image_palette_enter.xml  fragment_main_enter.xml
android/app/src/main/res/values/: attr.xml  colors.xml  id.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: filepaths.xml  shortcuts.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: .gitignore  CNAME  Gemfile  _config.yml  index.html  package-lock.json  package.json
docs/_data/: urls.yml
docs/_includes/: custom-footer.html  custom-header.html  footer.html  head.html  header.html  main.scss
docs/_includes/css/: MyFontsWebfontsKit.css  destyle.css
docs/_layouts/: default.html
docs/_sass/: _containers.scss  _helpers.scss  _layouts.scss  _page.scss  _typography.scss  containers.scss  main.scss
docs/_sass/components/: _buttons.scss
docs/css/: main.scss
gtk/: .editorconfig  .gitignore  Makefile  app.paletti.gtk.json  meson.build
gtk/data/: app.paletti.gtk.desktop.in  app.paletti.gtk.gschema.xml  app.paletti.gtk.metainfo.xml.in  meson.build
gtk/data/icons/: meson.build
gtk/po/: POTFILES  meson.build
gtk/src/: application.vala  color.vala  dialog.vala  leptonica.vala  main.vala  meson.build  model.vala  notification.vala  paletti.gresource.xml  pix.vala  scene.vala  window.vala
gtk/src/gtk/: help-overlay.ui
gtk/src/resources/: LICENSE  style.css
gtk/src/ui/: color-tile-placeholder.ui  color-tile.ui  color_palette.ui  color_tile.ui  color_tile_placeholder.ui  export_palette_dialog.ui  help-overlay.ui  notification.ui  open_file_dialog.ui  save_file_dialog.ui  scene-image.ui  scene-initial.ui  scene-posterize.ui  views-color-palette.ui  views-color-tile.ui  views-notification.ui  window.ui
gtk/src/views/: color_palette.vala  color_tile.vala  notification.vala  scene.vala
gtk/vapi/: lept.vapi
javafx/: .gitignore  build.gradle.kts  settings.gradle.kts
javafx/gradle/wrapper/: gradle-wrapper.properties
javafx/src/main/kotlin/: App.kt  Database.kt  Errors.kt  Main.kt  Message.kt  Model.kt  Pix.kt  PosterizedImage.kt  ViewModel.kt
javafx/src/main/kotlin/app/paletti/lib/: FilePaths.kt  Leptonica.kt  Windows.kt
javafx/src/main/kotlin/components/: ColorTile.kt  Dialogs.kt  Fragment.kt  HeaderBar.kt  Notification.kt  PalettiActivity.kt  PalettiWindow.kt
javafx/src/main/kotlin/controllers/: Dialogs.kt  Fragment.kt  PalettiActivity.kt
javafx/src/main/kotlin/ui/: Animation.kt  Shortcuts.kt
javafx/src/main/kotlin/views/: ColorTile.kt  FluentMenu.kt  FluentSlider.kt  FluentTooltip.kt  Notification.kt
javafx/src/main/resources/: Fluent.css  FluentDark.css  LICENSE  licenseReport.txt  style.css
javafx/src/main/resources/components/: ColorTile.fxml  Dialog_About.fxml  FragmentImage.fxml  FragmentInitial.fxml  HeaderBar.fxml  NotificationPane.fxml  Notification_TypeError.fxml  PalettiActivity.fxml  PalettiWindow.fxml
javafx/src/main/resources/controllers/: Dialog_About.fxml  PalettiActivity.fxml
javafx/src/main/resources/menus/: Menu_Activity.fxml
javafx/src/main/resources/views/: ColorTile.fxml
lib/: Paletti.sln  Paletti.vcxproj  Paletti.vcxproj.filters  dllmain.cpp  pch.h
src/: cache.vala  color.vala  dialog.vala  image.vala  main.vala  notification.vala  paletti.gresource.xml  pix.vala  scene.vala  window.vala
src/main/kotlin/: Controller.kt  Main.kt
src/main/resources/: MainWindow.fxml  index.html  style.css
src/resources/: LICENSE  style.css
src/ui/: color_palette.ui  color_tile.ui  export_palette_dialog.ui  help-overlay.ui  notification.ui  open_file_dialog.ui  posterized-image.ui  save_file_dialog.ui  scene-initial.ui  scene-posterize.ui  window.ui
vapi/: lept.vapi
(+7 files in other folders)
