CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

ADD_LIBRARY(paletti SHARED paletti.cpp)

FIND_LIBRARY(zlib libz)
INCLUDE_DIRECTORIES(${zlib}/include)
TARGET_LINK_LIBRARIES(paletti z)

FIND_LIBRARY(log-lib log)
TARGET_LINK_LIBRARIES(paletti ${log-lib})

ADD_SUBDIRECTORY(${LEPT_SRC_DIR}
                 ${CMAKE_CURRENT_BINARY_DIR}/lept)
ADD_LIBRARY(lept STATIC IMPORTED)
SET_TARGET_PROPERTIES(lept PROPERTIES IMPORTED_LOCATION
                      ${CMAKE_CURRENT_BINARY_DIR}/lept/src/libleptonica.a)
INCLUDE_DIRECTORIES(${LEPT_SRC_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/lept/src)
TARGET_LINK_LIBRARIES(paletti lept)
